Fixed vertical align of texts in entries.

--- a/app/assets/stylesheets/partials/_entries.scss
+++ b/app/assets/stylesheets/partials/_entries.scss
@@ -52,7 +52,7 @@
       vertical-align: middle;
       padding: {
         top: 5px;
-        bottom: 5px;
+        bottom: 8px;
         left: 10px;
         right: 10px;
       }
@@ -113,6 +113,7 @@
     .entry-published {
       text-align: right;
       padding-right: 2px;
+      padding-top: 2px;
     }
 
     .entry-toolbar {
